# pace_app

./: Cargo.toml
app/src/: lib.rs  no_resolver.rs
base_resolver/: Cargo.toml
base_resolver/src/: lib.rs
desktop/: Cargo.toml  Dioxus.toml
desktop_resolver/: Cargo.toml
desktop_resolver/src/: lib.rs
desktop_view/: Cargo.toml
desktop_view/src/: main.rs
src/: main_multi_windows.rs  main_pane_grid.rs
web/: Cargo.toml
web/src/: main.rs
web_resolver/: Cargo.toml
web_resolver/src/: lib.rs
web_view/: Cargo.toml  Dioxus.toml
