[package]
name = "web_resolver"
version = "0.1.0"
edition = "2021"

[dependencies]

base_resolver = { path = "../base_resolver" }

serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
